--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Web Design Mastery | Fitclub</title>
+    <title>Gym Website</title>
   </head>
   <body>
     <nav>
@@ -239,8 +239,8 @@
             <div class="review__member">
               <img src="Assets/IMG-20241026-WA0014.jpg" alt="member" />
               <div class="review__member__details">
-                <h4>Jane Cooper</h4>
-                <p>Software Developer</p>
+                <h4>Saqib Aziz</h4>
+                <p>Frontend Developer</p>
               </div>
             </div>
             <div class="review__nav">
@@ -288,8 +288,5 @@
         <a href="#">BMI Calculator</a>
       </div>
     </footer>
-    <div class="footer__bar">
-      Copyright © 2023 Web Design Mastery. All rights reserved.
-    </div>
   </body>
 </html>
